adding styling to dashboard

--- a/public/js/directives/menuBar.html
+++ b/public/js/directives/menuBar.html
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<div class="navbar-brand">Logo</div>
+			<div class="navbar-brand"><a href="/">Logo</a></div>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-left">
@@ -15,14 +15,14 @@
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact Us</a></li>
 			</ul>
-			<div id="loginContainer" class="nav navbar-right"><div class="glyphicon glyphicon-user">Login</div></div>	
+			<div id="loginContainer" class="nav navbar-right"><div class="glyphicon glyphicon-user" style="color: #FFF">Login</div></div>	
 		</div>
 		
 	</div>
 </nav>
 		
 <div id="loginBox">
-	<p>Login: <input type="text" id="" name=""></p>
-	<p>Password: <input type="text" id="" name=""></p>
-	<button id="btnLogin">Login</button>
+	<p>Username: <input type="text" id="user" name="user"></p>
+	<p>Password: <input type="text" id="pass" name="pass"></p>
+	<button id="btnLogin" ng-click="">Login</button>
 </div>
