--- a/public/js/directives/menuBar.html
+++ b/public/js/directives/menuBar.html
@@ -10,8 +10,8 @@
 			<div class="navbar-brand"><a href="/">Logo</a></div>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-left">
-				<li class="active"><a href="#">Home</a></li>
+			<ul class="nav navbar-nav navbar-left" style="margin-left: 10.5%">
+				<li class="active"><a href="/">Home</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact Us</a></li>
 			</ul>
