secure pages now works

--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,18 @@
 <script type="text/javascript" src="js/controllers/menuBarController.js"></script>
 <script type="text/javascript" src="js/controllers/homeController.js"></script>
 <script type="text/javascript" src="js/controllers/uploadsController.js"></script>
+<script type="text/javascript" src="js/controllers/profileController.js"></script>
+<script type="text/javascript" src="js/controllers/studentsController.js"></script>
 
-<script type="text/javascript">
-	
-</script>
+
+<!-- services -->
+<script type="text/javascript" src="js/services/loginService.js"></script>
+<script type="text/javascript" src="js/services/studentService.js"></script>
+
+<!-- ngStorage -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
+
+
 
 </body>
 </html>
