--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
 	<!---        DropzoneJs     -->
 	<link rel="stylesheet" type="text/css" href="dropzone/dropzone.css">
-	<link rel="stylesheet" type="text/css" href="dropzone/dropzone-simple.css">
+<!-- 	<link rel="stylesheet" type="text/css" href="dropzone/dropzone-simple.css"> -->
 	<script type="text/javascript" src="dropzone/dropzone.js"></script>
 	<!-- <script type="text/javascript" src="dropzone/dropzoneOptions.js"></script> -->
 
@@ -47,7 +47,7 @@
 	<ng-include></ng-include>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid" style="height: 100%;">
 	
 	<div class="row">
 		<div class="col-sm-3 col-md-2 sidebar" ng-hide="$state.current.name === 'home'" ng-include="'includes/sidebar.html'">
