had to change url for ui-router

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 	<script type="text/javascript" src="js/events.js"></script>
 
 	<!---		UI-Router		-->
-	<script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
+	<script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
 
 	<!---        DropzoneJs     -->
 	<link rel="stylesheet" type="text/css" href="dropzone/dropzone.css">
