--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 <script type="text/javascript" src="js/controllers/uploadsController.js"></script>
 <script type="text/javascript" src="js/controllers/profileController.js"></script>
 <script type="text/javascript" src="js/controllers/studentsController.js"></script>
-
+<script type="text/javascript" src="js/controllers/registerController.js"></script>
 
 <!-- services -->
 <script type="text/javascript" src="js/services/loginService.js"></script>
