made changes for register

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 			<ng-include ng-hide="$state.current.name === 'home' || $state.current.name === 'register'"></ng-include>
 		</div>
 
-		<div ng-class="$state.$current.name !== 'home' $state.current.name === 'register' ? 'col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2' : 'col-sm-12 col-md-12'" class="main">
+		<div ng-class="($state.$current.name !== 'home' || $state.current.name !== 'register') ? 'col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2' : 'col-sm-12 col-md-12'" class="main">
 			<div ui-view></div>
 		</div>	
 	</div>
