--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 	
 	<div class="row">
 		<div class="col-sm-3 col-md-2 sidebar" ng-hide="$state.current.name === 'home'" ng-include="'includes/sidebar.html'">
-			<ng-include ng-hide="$state.current.name === 'home' | $state.current.name === 'register'"></ng-include>
+			<ng-include ng-hide="$state.current.name === 'home' || $state.current.name === 'register'"></ng-include>
 		</div>
 
 		<div ng-class="($state.$current.name !== 'home' || $state.current.name !== 'register') ? 'col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2' : 'col-sm-12 col-md-12'" class="main">
