--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,12 @@
 
 <!-- directives -->
 <!-- <script type="text/javascript" src="js/directives/menuBar.js"></script> -->
+<!-- <script type="text/javascript" src="js/directives/compareTo.js"></script> -->
 <script type="text/javascript" src="js/directives/uploadsDirective.js"></script>
 <script type="text/javascript" src="js/directives/modal.js"></script>
+<script type="text/javascript" src="js/directives/profile-modal.js"></script>
+<script type="text/javascript" src="js/directives/login-modal.js"></script>
+
 
 <!-- controllers -->
 <script type="text/javascript" src="js/controllers/indexController.js"></script>
@@ -85,6 +89,8 @@
 <!-- services -->
 <script type="text/javascript" src="js/services/loginService.js"></script>
 <script type="text/javascript" src="js/services/studentService.js"></script>
+<script type="text/javascript" src="js/services/profileService.js"></script>
+
 
 <!-- ngStorage -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
