--- a/public/index.html
+++ b/public/index.html
@@ -47,19 +47,19 @@
 	<ng-include></ng-include>
 </div>
 
-<div class="container-fluid" style="height: 100%;">
+<!-- <div class="container" style="height: 100%;"> -->
 	
-	<div class="row">
+	<div class="row" style="margin-right: unset">
 		<div class="col-sm-3 col-md-2 sidebar" ng-hide="$state.$current.name === 'home' || $state.$current.name === 'register'" ng-include="'includes/sidebar.html'">
 			<ng-include ng-hide="$state.$current.name === 'home' || $state.$current.name === 'register'"></ng-include>
 		</div>
 
 <!-- 		<div ng-class="{$state.$current.name !== ('home' || 'register') ? 'col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2' : 'col-sm-12 col-md-12'}" class="main"> -->
-			<div ng-class="{'col-sm-12 col-md-12': $state.$current.name === 'home' || $state.$current.name === 'register', 'col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2': $state.$current.name === 'dash' || $state.$current.name === 'profile' || $state.$current.name === 'students'|| $state.$current.name === 'uploads'}" class="main">
+		<div ng-class="{'col-sm-12 col-md-12': $state.$current.name === 'home' || $state.$current.name === 'register', 'col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2': $state.$current.name === 'dash' || $state.$current.name === 'profile' || $state.$current.name === 'students'|| $state.$current.name === 'uploads'}" class="main">
 			<div ui-view></div>
 		</div>	
 	</div>
-</div>
+<!-- </div> -->
 		
 
 
